--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.2",
+    "less-loader": "^10.0.1",
     "style-loader": "^3.3.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.57.1",
