--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Alex Forsythe",
   "license": "MIT",
   "dependencies": {
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
