--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": ">=6.14.15"
   },
   "scripts": {
+    "test": "jest",
     "start": "webpack serve --host 0.0.0.0 --port 8080",
     "build": "webpack --mode=\"production\"",
     "build:dev": "webpack"
@@ -32,6 +33,7 @@
     "css-loader": "^6.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^28.1.1",
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
     "style-loader": "^3.3.0",
