--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": ">=6.14.15"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "webpack serve --host 0.0.0.0 --port 8080",
     "build": "webpack --mode=\"production\"",
     "build:dev": "webpack"
